--- a/TnbAtmosphericModels/TnbAtmosphericModels.vcxproj
+++ b/TnbAtmosphericModels/TnbAtmosphericModels.vcxproj
@@ -148,6 +148,23 @@
     <ClCompile Include="TnbLib\atmosphericModels\kEpsilonLopesdaCosta\kEpsilonLopesdaCosta.cxx" />
     <ClCompile Include="TnbLib\atmosphericModels\porosityModels\powerLawLopesdaCosta\powerLawLopesdaCosta.cxx" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TnbBase\TnbBase.vcxproj">
+      <Project>{0eaecc55-7ec6-4414-897b-0156a774c01c}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\TnbFiniteVolume\TnbFiniteVolume.vcxproj">
+      <Project>{5845ec09-4e08-49f8-a805-f71c9cdde696}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\TnbFvMesh\TnbFvMesh.vcxproj">
+      <Project>{c5b9d5f2-4a73-47cd-85e1-65bc340bc2c2}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\TnbFvOptions\TnbFvOptions.vcxproj">
+      <Project>{be9daf5d-75b5-4744-b7d4-fb8a1a2150ca}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\TnbTurbulence\TnbTurbulence.vcxproj">
+      <Project>{c44b171d-747f-4fe0-b6e9-b8c6c88ddc40}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
