"codeStreamDict1" has been added to "codeStream" folder

--- a/applications/test/codeStream/Test-codeStream/Test-codeStream.vcxproj
+++ b/applications/test/codeStream/Test-codeStream/Test-codeStream.vcxproj
@@ -22,8 +22,9 @@
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
     <ProjectGuid>{df284301-a802-41b9-8777-bec34fadc7b3}</ProjectGuid>
-    <RootNamespace>TestdcodeStream</RootNamespace>
+    <RootNamespace>TestcodeStream</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.18362.0</WindowsTargetPlatformVersion>
+    <ProjectName>Test-codeStream</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
